--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -271,7 +271,7 @@ hr
             line-height: 15px
             max-width: 340px
             cursor: pointer
-            a 
+            a
                 color: #000
                 font-weight: bold
             &::after,
@@ -303,7 +303,8 @@ hr
 
 @media screen and ( max-width: 1600px )
     .container
-        max-width: 1200px
+        max-width: 1240px
+        padding: 0 20px
 
     .heading
         font-size: 44px
@@ -326,6 +327,11 @@ hr
             border-width: 1px
         &-img
             padding-right: 90px
+
+    input,
+    textarea,
+    select
+        height: 70px
 
 @media screen and ( max-width: 1200px )
     .container
